test/Fail/Polarity-pragma-out-of-scope.agda
postulate
  A : Set

module _ where

  {-# POLARITY A #-}
